--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,8 @@ port: 3000
 sass:
   sass_dir: assets/css
   style: :nested
+
+# Site settings
+title: My Theme
+description: "Thinker // Designer // Youtuber"
+
