--- a/_config.yml
+++ b/_config.yml
@@ -13,3 +13,15 @@ sass:
 title: My Theme
 description: "Thinker // Designer // Youtuber"
 
+# Site defaut
+
+avatar: face.jpg
+
+bg-img: bg_header_1.jpg
+
+bg-logo: logo.svg
+
+blurb: <p><strong>In pellentesque faucibus vestibulum.</strong> Nulla at nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus acus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et </p>
+
+
+
