--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -1,6 +1,7 @@
 # Site settings
-title: My Theme
+title: Artist theme
 description: "Thinker // Designer // Youtuber"
+email: artist@gmail.com
 
 # Site default
 
@@ -69,3 +70,11 @@ clients:
   title: 'VP of Helmut, Lorem Sorem LLC.',
   quote: '<p><strong>Back in old country</strong> only nerds who is playing on computers. Now all bros is wanting to make codes and junk. I lost foot in war. You dont see girls asking me about homework.</p>',
   logo: 'logo4.png'}
+
+#---------------
+# SOCIAL LIST
+socials:
+- {link: '#', icon: "icon-facebook2"}
+- {link: '#', icon: "icon-twitter2"}
+- {link: '#', icon: "icon-youtube3"}
+- {link: '#', icon: "icon-linkedin"}
